# actions

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .yamllint.yaml  Dockerfile  LICENSE  README.md  cspell.config.yaml  mise.toml  package-lock.json  package.json  prek.toml  pyproject.toml  renovate.json  sonar-project.properties
.config/: cspell.config.yaml  dictionary.txt
.github/: release-drafter.yml
.github/workflows/: ack.yml  finalize.yml  post.yml  push.yml  release.yml  self-test.yml  test.yml  tox.yml
codecov-status/: action.yml  codecov_status.py
config/: renovate.json
matrix/: README.md  action.yml
src/dynamic_matrix/: __main__.py
tests/: test_action.py
tools/: test-hooks.sh
upload-artifact/: README.md  action.yml
upload-artifact/scripts/: ensure-gitleaks.sh  run-gitleaks.sh
